--- a/video.html
+++ b/video.html
@@ -12,7 +12,7 @@
           <div class="video-page-header">
             <div class="video-description">
              <div class="header-left">
-              <img src="img/placeholder.png">
+              <img src="img/poster.jpg">
                <div class="my-list">
                  <i class="fas fa-check"></i> My List
                </div>
@@ -39,7 +39,7 @@
           </div>
             
           <div class="streaming-container">
-           <img src="http://4.bp.blogspot.com/-Xx_xBL54Pas/TtkId59pLuI/AAAAAAAAIUc/T7v0-EqgEd0/s1600/bigfish5.jpg"/>
+           <video src="img/qualification.mp4"/>
             <div class="streaming-play">
               <i class="fas fa-play"></i>
             </div>
