--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <title>DCB STUDIOS</title>
         <link href="css/style.css" rel="stylesheet">
+        <link rel="shortcut icon" href="img/Dulwich%20Favicon.png">
     </head>
 
     <body>
