--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>DCB STUDIOS</title>
+        <title>DCB Studios</title>
         <link href="css/style.css" rel="stylesheet">
-        <link rel="shortcut icon" href="img/Dulwich%20Favicon.png">
+        <link rel="shortcut icon" href="https://www.dulwich.org/favicon.ico">
+        <script src="https://kit.fontawesome.com/6f8f0bfacf.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
