--- a/video.html
+++ b/video.html
@@ -26,30 +26,30 @@
           <div class="video-page-header">
             <div class="video-description">
              <div class="header-left">
-              <img src="img/poster.jpg">
+              <img src="img/poster.png">
               </div>
               <div class="header-right">
-                <h1>Lords of the Locker rooms</h1>
-                <h2>1999<span>1h 45m</span></h2>
-               <p>Billy Herrington was taking a shower, when Nick Steel entered in lockerroom. After shower Billy started to change clothes and keeps up appearances by challenging Nick to a match. They strip down to their trunks and wrestle.</p> 
+                <h1>Dulwich Tech Expo 2018</h1>
+                <h2>2018<span>4m 11s</span></h2>
+                <p>Dulwich College Beijing hosts the first Dulwich Tech Expo for KS3 Students! Students across all Dulwich schools worked together to make a bug-based food product to convince markets that they are a sustainable food source.</p> 
                 <div class='info'>
                   <h4>Director:</h4>
-                  <h5>Matthew Moore</h5>
+                  <h5>DCB Media Team</h5>
                 </div>
                 <div class='info'>
                   <h4>Starring: </h4>
-                  <h5>TJ Cummings, Van Darkholme, Billy Herrington, Mark Wolff</h5>
+                  <h5>All 7 Dulwich schools!</h5>
                 </div>
                 <div class='info'>
                   <h4>Tags:</h4>
-                  <h5>Philosophy, Wrestling, Marcus' Favourites</h5>
+                  <h5>#SE21, #DCB</h5>
                 </div>
               </div>
             </div>
           </div>
           
         <div class="videoplayer">
-            <iframe width="1280" height="720" src="https://web.microsoftstream.com/embed/video/d1fd581c-9145-4d9b-ade2-10382862b3e2?autoplay=false&amp;showinfo=true" allowfullscreen style="border:none;"></iframe>
+            <iframe width="1280" height="720" src="https://web.microsoftstream.com/embed/video/788b7dc0-ca18-46b8-a26a-ebaab2cc0fea?autoplay=false&amp;showinfo=true" allowfullscreen style="border:none;" allowfullscreen style="border:none;"></iframe>
         </div>
         <br><br><br>
             
