--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
         
         <main>
             <br>
-            <h1>Slider</h1>
+            <h1>Suggested</h1>
                 <div class="container">
                     <div class="item">
                         <a href="video.html">
@@ -90,7 +90,7 @@
             <br>
             <br>
 
-            <h1>Slider</h1>
+            <h1>Chinese Short Film</h1>
                 <div class="container">
                     <div class="item">
                         <a href="video.html">
@@ -146,7 +146,7 @@
             <br>
             <br>
 
-            <h1>Slider</h1>
+            <h1>School Events</h1>
                 <div class="container">
                     <div class="item">
                         <a href="video.html">
