--- a/video.html
+++ b/video.html
@@ -49,7 +49,7 @@
           </div>
           
         <div class="videoplayer">
-            <iframe width="1280" height="720" src="https://web.microsoftstream.com/embed/video/788b7dc0-ca18-46b8-a26a-ebaab2cc0fea?autoplay=false&amp;showinfo=true" allowfullscreen style="border:none;" allowfullscreen style="border:none;"></iframe>
+            <iframe width="1280" height="720" src="https://web.microsoftstream.com/embed/video/788b7dc0-ca18-46b8-a26a-ebaab2cc0fea?autoplay=false&amp;showinfo=true" allowfullscreen style="border:none;"></iframe>
         </div>
         <br><br><br>
             
