--- a/home.html
+++ b/home.html
@@ -3,6 +3,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="description" content="All DCB Movies on THIS site.">
         <title>DCB Studios</title>
         <link href="css/home.css" rel="stylesheet">
         <link rel="shortcut icon" href="https://www.dulwich.org/favicon.ico">
@@ -31,7 +32,6 @@
         </header>
         
         <main>
-            <p id="captione">All the DCB Movies, on THIS site.</p>
             <br>
             <h1>Suggested</h1>
                 <div class="container">
